P0MS-293 quickly making something to create mock TVA xmlss easily.